--- a/.github/workflows/build-macos-arm.yml
+++ b/.github/workflows/build-macos-arm.yml
@@ -25,8 +25,14 @@ jobs:
         run: echo "NOW=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
         
       - name: 'Build m8c'
+        id: buildApplication
+        continue-on-error: true
         run: |
           mkdir -p build_arm64 && cd build_arm64 && cmake .. && cpack -V
+
+      - name: 'View debug log if compilation fails'
+        if: failure() && steps.buildApplication.outcome == 'failure'
+        run: cat /Users/runner/work/m8c/m8c/build_arm64/_CPack_Packages/Darwin/DragNDrop/PreinstallOutput.log
 
       - name: 'Build package'
         run: |
