--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -8,13 +8,15 @@ on:
 jobs:
  
   build-linux:
+    env:
+      SDL_VERSION: 3.2.4
     runs-on: ubuntu-latest
     name: linux-x86_64
     steps:
       - name: 'Install dependencies'
         run: |
           sudo apt-get update
-          sudo apt-get install --fix-missing build-essential libserialport-dev zip
+          sudo apt-get install --fix-missing build-essential libserialport-dev zip git make pkg-config cmake ninja-build gnome-desktop-testing libasound2-dev libpulse-dev libaudio-dev libjack-dev libsndio-dev libx11-dev libxext-dev libxrandr-dev libxcursor-dev libxfixes-dev libxi-dev libxss-dev libxkbcommon-dev libdrm-dev libgbm-dev libgl1-mesa-dev libgles2-mesa-dev libegl1-mesa-dev libdbus-1-dev libibus-1.0-dev libudev-dev
 
       - name: 'Cache SDL3 files'
         id: cache-x86_64-sdl3-files
@@ -26,23 +28,18 @@ jobs:
       - name: 'Download SDL3 sources'
         if: steps.cache-x86_64-sdl3-files.outputs.cache-hit != 'true'
         run: |
-          (curl https://www.libsdl.org/release/SDL3-$SDL_VERSION.tar.gz || curl -L https://github.com/libsdl-org/SDL/releases/download/release-$SDL_VERSION/SDL3-$SDL_VERSION.tar.gz) | tar xvf -
+          (curl https://www.libsdl.org/release/SDL3-$SDL_VERSION.tar.gz || curl -L https://github.com/libsdl-org/SDL/releases/download/release-$SDL_VERSION/SDL3-$SDL_VERSION.tar.gz) | tar zxvf -
 
       - name: 'Build SDL3'
         if: steps.cache-x86_64-sdl3-files.outputs.cache-hit != 'true'
         run: |
           pushd SDL3-$SDL_VERSION
           mkdir build_x86_64
-          cd build_x86_64
-          ../configure
-          make
+          cmake -S . -B build_x86_64
+          cmake --build build_x86_64
+          sudo cmake --install build_x86_64
           popd
 
-      - name: 'Install SDL3'
-        run: |
-          pushd SDL3-$SDL_VERSION/build_x86_64
-          make install 
-          popd
 
       - name: 'Checkout'
         uses: actions/checkout@v4
