add initial rtmidi things

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,22 +2,32 @@ cmake_minimum_required(VERSION 3.15)
 
 project(m8c LANGUAGES C)
 
-set(CMAKE_C_FLAGS "-O2 -Wall -Wextra")
+set(CMAKE_C_FLAGS "-g -Wall -Wextra")
 
 set(APP_NAME m8c)
+
+set(USE_RTMIDI 1)
 
 find_package(PkgConfig REQUIRED)
 find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3)
 
 pkg_check_modules(SDL3 REQUIRED sdl3)
+if (USE_LIBSERIALPORT)
+    pkg_check_modules(LIBSERIALPORT REQUIRED libserialport)
+    link_directories(${SDL3_LIBRARY_DIRS} ${LIBSERIALPORT_LIBRARY_DIRS})
+    add_compile_definitions(USE_LIBSERIALPORT)
+endif (USE_LIBSERIALPORT)
 if (USE_LIBUSB)
     pkg_check_modules(LIBUSB REQUIRED libusb-1.0)
     link_directories(${SDL3_LIBRARY_DIRS} ${LIBUSB_LIBRARY_DIRS})
     add_compile_definitions(USE_LIBUSB)
-else ()
-    pkg_check_modules(LIBSERIALPORT REQUIRED libserialport)
-    link_directories(${SDL3_LIBRARY_DIRS} ${LIBSERIALPORT_LIBRARY_DIRS})
 endif (USE_LIBUSB)
+if (USE_RTMIDI)
+    pkg_check_modules(RTMIDI REQUIRED rtmidi)
+    link_directories(${SDL3_LIBRARY_DIRS} ${RTMIDI_LIBRARY_DIRS})
+    add_compile_definitions(USE_RTMIDI)
+endif (USE_RTMIDI)
+
 
 file(GLOB m8c_SRC "src/*.h" "src/*.c")
 
@@ -29,14 +39,22 @@ set_source_files_properties(${APP_ICON} PROPERTIES
 
 add_executable(${APP_NAME} WIN32 MACOSX_BUNDLE ${APP_ICON} ${m8c_SRC})
 
+if (USE_LIBSERIALPORT)
+    target_link_libraries(${APP_NAME} ${SDL3_LIBRARIES} ${LIBSERIALPORT_LIBRARIES})
+    target_include_directories(${APP_NAME} PUBLIC ${SDL3_INCLUDE_DIRS} ${LIBSERIALPORT_INCLUDE_DIRS})
+    target_compile_options(${APP_NAME} PUBLIC ${SDL3_CFLAGS_OTHER} ${LIBSERIALPORT_CFLAGS_OTHER})
+endif ()
+
 if (USE_LIBUSB)
     target_link_libraries(${APP_NAME} ${SDL3_LIBRARIES} ${LIBUSB_LIBRARIES})
     target_include_directories(${APP_NAME} PUBLIC ${SDL3_INCLUDE_DIRS} ${LIBUSB_INCLUDE_DIRS})
     target_compile_options(${APP_NAME} PUBLIC ${SDL3_CFLAGS_OTHER} ${LIBUSB_CFLAGS_OTHER})
-else ()
-    target_link_libraries(${APP_NAME} ${SDL3_LIBRARIES} ${LIBSERIALPORT_LIBRARIES})
-    target_include_directories(${APP_NAME} PUBLIC ${SDL3_INCLUDE_DIRS} ${LIBSERIALPORT_INCLUDE_DIRS})
-    target_compile_options(${APP_NAME} PUBLIC ${SDL3_CFLAGS_OTHER} ${LIBSERIALPORT_CFLAGS_OTHER})
+endif ()
+
+if (USE_RTMIDI)
+    target_link_libraries(${APP_NAME} ${SDL3_LIBRARIES} ${RTMIDI_LIBRARIES})
+    target_include_directories(${APP_NAME} PUBLIC ${SDL3_INCLUDE_DIRS} ${RTMIDI_INCLUDE_DIRS})
+    target_compile_options(${APP_NAME} PUBLIC ${SDL3_CFLAGS_OTHER} ${RTMIDI_CFLAGS_OTHER})
 endif ()
 
 if (APPLE)
@@ -44,7 +62,7 @@ if (APPLE)
     install(TARGETS ${APP_NAME}
             BUNDLE DESTINATION . COMPONENT Runtime
             RUNTIME DESTINATION bin COMPONENT Runtime
-            )
+    )
 
     set_target_properties(${APP_NAME} PROPERTIES
             MACOSX_BUNDLE TRUE
