install sdl3 as a separate step in ubuntu build, use sdl_snprintf in render.c

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -47,6 +47,11 @@ jobs:
           mkdir build_x86_64
           cmake -S . -B build_x86_64 -DCMAKE_BUILD_TYPE=Release
           cmake --build build_x86_64
+          popd
+
+      - name: 'Install SDL3'
+        run: |
+          pushd SDL3-$SDL_VERSION
           sudo cmake --install build_x86_64
           popd
 
