--- a/.github/workflows/build-macos-intel.yml
+++ b/.github/workflows/build-macos-intel.yml
@@ -7,11 +7,11 @@ on:
 
 jobs:
 
-  build-macos:
+  build-macos-intel:
     runs-on: macos-13
+    name: m8c MacOS build (x86_64)
     env:
-      BUILD_DIR: build_x64
-
+      BUILD_DIR: build-x86_64
     steps:
       - name: 'Environment info'
         run: |
