--- a/.github/workflows/build-macos-arm.yml
+++ b/.github/workflows/build-macos-arm.yml
@@ -72,14 +72,38 @@ jobs:
         if: failure() && steps.buildApplication.outcome == 'failure'
         run: cat /Users/runner/work/m8c/m8c/${{ env.BUILD_DIR }}/_CPack_Packages/Darwin/DragNDrop/PreinstallOutput.log
 
-      - name: Delete Custom Keychain
+      - name: 'Notarize the App'
+        run: |
+          pushd ${{ env.BUILD_DIR }}
+          APP_PATH=$(find package-output -name "*.dmg" | head -n 1)
+          xcrun notarytool submit \
+            --apple-id "$APPLE_ID" \
+            --team-id "$TEAM_ID" \
+            --password "$APPLE_PASSWORD" \
+            --wait \
+            $APP_PATH
+          xcrun stapler staple "$APP_PATH"
+          popd
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_PASSWORD: ${{ secrets.APP_SPECIFIC_PASSWORD }}
+          TEAM_ID: ${{ secrets.TEAM_ID }}
+
+
+      - name: 'Verify Stapling'
+        run: |
+          APP_PATH=$(find "${{ env.BUILD_DIR }}/package-output" -name "*.dmg" | head -n 1)
+          echo "Verifying stapling on $APP_PATH"
+          xcrun stapler validate "$APP_PATH"        
+
+      - name: 'Delete Custom Keychain'
         if: steps.createCustomKeychain.outcome == 'success'
         run: |
-          security delete-keychain build.keychain
+          security delete-keychain build.keychain        
 
       - name: 'Copy package'
         run: |
-          APP_PATH=$(find build_output -name "*.dmg" | head -n 1)
+          APP_PATH=$(find "${{ env.BUILD_DIR }}/package-output" -name "*.dmg" | head -n 1)
           mv "$APP_PATH" m8c-${{ env.NOW }}-macos-applesilicon.dmg
 
       - name: 'Upload DMG package'
